--- a/index.html
+++ b/index.html
@@ -43,9 +43,12 @@
                     <button type="button" id="btn-add-todo-window" class="btn btn-lg btn-block btn-info">
                         Add a Todo
                     </button>
+
+                    <button type="button" id="btn-logout" class="btn btn-lg btn-block btn-danger">
+                        Logout
+                    </button>
                 </div>
             </div>
-
         </div>
 
         <div id="add-modal" class="modal fade" tabindex="-1" role="dialog">
